@@ -32,6 +32,7 @@ used in Tiff files.
 * New title field of Special:MovePage is now length limited on client side.
 * (bug 28888) Searching for something starting with a # sign no longer tells
   the user a page named [[:]] already exists.
+* (bug 28960) Added more messages to Special:EmailUser.
 
 === API changes in 1.19 ===
 * (bug 27790) add query type for querymodules to action=paraminfo
